--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <!-- Search Bar and Trending Tags -->
             <section class="search-section fade-in">
                 <form class="search-form" action="#" method="get">
-                    <input type="text" placeholder="Search articles, tools, models..." name="q" aria-label="Search">
+                    <input type="text" placeholder="Search AI" name="q" aria-label="Search">
                     <button type="submit">🔍</button>
                 </form>
                 <div class="trending-tags">
